--- a/PBD_CG_Seminar/mainwindow.ui
+++ b/PBD_CG_Seminar/mainwindow.ui
@@ -29,7 +29,6 @@
       <property name="focusPolicy">
        <enum>Qt::StrongFocus</enum>
       </property>
-      <zorder></zorder>
      </widget>
     </item>
     <item>
@@ -37,6 +36,30 @@
       <property name="sizeConstraint">
        <enum>QLayout::SetFixedSize</enum>
       </property>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_7">
+        <item>
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Pressure:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QDoubleSpinBox" name="spinBoxPressure">
+          <property name="maximum">
+           <double>100.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+          <property name="value">
+           <double>1.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_6">
         <item>
@@ -175,6 +198,15 @@
     <property name="title">
      <string>File</string>
     </property>
+    <widget class="QMenu" name="menuScene">
+     <property name="title">
+      <string>Scene</string>
+     </property>
+     <addaction name="actionScene1"/>
+     <addaction name="actionScene2"/>
+     <addaction name="actionScene3"/>
+    </widget>
+    <addaction name="menuScene"/>
     <addaction name="action_Exit"/>
    </widget>
    <addaction name="menuFile"/>
@@ -236,6 +268,21 @@
   <action name="actionScene_3">
    <property name="text">
     <string>Scene 3</string>
+   </property>
+  </action>
+  <action name="actionScene1">
+   <property name="text">
+    <string>Scene1</string>
+   </property>
+  </action>
+  <action name="actionScene2">
+   <property name="text">
+    <string>Scene2</string>
+   </property>
+  </action>
+  <action name="actionScene3">
+   <property name="text">
+    <string>Scene3</string>
    </property>
   </action>
  </widget>
